--- a/Module4-CSS/video-11/style.css
+++ b/Module4-CSS/video-11/style.css
@@ -24,6 +24,21 @@
     background-color: bisque;
     /* justify-self: center; */
     /* align-self: center; */
-    grid-column-start: 1;
-    grid-column-end: 3;
+
+    /* grid-column: 1 / -1; */
+    /* grid-column: 1 / 3; */
+    /* grid-column: 1 / span 2; */
+
+    /* grid-row: 1 / 4; */
+    /* grid-row: 1 / -3; */
+    /* grid-row: 1 / span 3; */
+
+    /* grid-column-start: 1; */
+    /* grid-column-end: 3; */
+
+    /* grid-row-start: 1; */
+    /* grid-row-end: 3; */
+
+    /* grid-area: 3 / 2 / 3 / 4; */  /* >> columns / row / C.No. / R.No. */
+    
 }
