--- a/Module4-CSS/12.Grid-PortFolio-In-CSS/style.css
+++ b/Module4-CSS/12.Grid-PortFolio-In-CSS/style.css
@@ -65,3 +65,27 @@ body{
     transition: all 1s ease-in-out;
     background-position: center;
 }
+
+/* media query for width <=1024px or max-width: 1024px */
+
+/* @media (width <= 1024px)() */
+
+@media (max-width: 1024px){
+    .container{
+        flex-direction: column;
+    }
+    .left-text{
+        font-size: 1rem;
+        padding: 25px 50px;
+        text-align: center;
+    }
+    .right{
+          width: 95%;
+          padding: 25px 50px;
+    }
+      
+    .child-imgs{
+        grid-row: span 1;
+        grid-column: span 3;
+    }
+}
