--- a/Module4-CSS/Assignment/style.css
+++ b/Module4-CSS/Assignment/style.css
@@ -1,155 +1,126 @@
 * {
-    margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    margin: 0;
+    box-sizing: content-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+.container{
+    width: auto;
+}
 
-.container {
+.nav {
+    /* background-color: lightblue; */
+    max-width: 100vw;
+    padding: 2rem 4.5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 5px;
-    padding: 20px;
-    width: 100vw;
-
 }
 
-/* .container >p{
-    margin-left: 30px;
-    color: rgb(95, 95, 95);
-    font-size: 1.3rem;
-    font-weight: bold;
-} */
-
-.logo {
-    margin-left: 30px;
-    color: rgb(95, 95, 95);
-    font-size: 1.3rem;
-    font-weight: bold;
-}
-
-.navbar ul {
+.navbar {
     display: flex;
-    gap: 50px;   /* spacing between items */
     list-style: none;
 }
 
-.navbar ul li a {
+.navbar li a {
     color: grey;
+    text-decoration: none;
+    padding: 20px;
+    margin: 0 5px;
+}
+.logo{
+    font-size: 0.9rem;
+    font-weight: bold;
+    color: rgb(95, 95, 95);
+}
+.button{
+    background-color: rgb(220, 242, 255);
+    padding: 10px 18px;
+    border-radius: 10px;
+
+}
+.button a{
+    color: rgb(49, 176, 255);
+    text-decoration: none;
+    font-size: 0.9rem;
+}
+
+.hero{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 5rem;
+
+}
+.left{
+    max-width: 500px;
+}
+.left h1{
+    font-size: 3rem;
+    line-height: 4rem;
+}
+#h-1{
+    color: rgb(49, 176, 255);
+}
+.left p{
+    margin-top: 20px;
+    padding-bottom: 20px;
+    color: darkgrey;
+    width: 430px;
+    font-size: large;
+    line-height: 1.8rem;
+}
+.service-btn{
+    display: inline-block;
+    background-color: rgb(49, 176, 255);
+    margin: 10px;
+    padding: 15px 10px;
+    border-radius: 10px;
+}
+.service-btn a{
+    text-align: center;
+    font-size: smaller;
+    color: white;
     text-decoration: none;
 }
 
-
-.username {
-    font-weight: bold;
-    padding: 15px 25px;
-    font-size: 0.7rem;
-    border-radius: 10px;
-    color: rgb(49, 176, 255);
-    background-color: rgb(220, 242, 255);
-    margin-right: 30px;
+.right img{
+    width: 530px;
+    height: 450px;
 }
 
-.hero {
-    margin: 100px 0px 100px 150px;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-
-}
-
-h1 {
-    font-size: 3rem;
-    line-height: 1.5;
-}
-
-#h-1 {
-    font-size: 3rem;
-    color: rgb(49, 176, 255);
-}
-
-p {
-    line-height: 1.6;
-    font-size: large;
-    color: lightgrey;
-}
-
-.right img {
-    width: 600px;
-    height: 500px;
-}
-
-button {
-    margin-top: 35px;
-    padding: 15px 20px;
-    background-color: rgb(49, 176, 255);
-    color: white;
-    border: none;
-    border-radius: 10px;
-}
-
-@media (min-width: 200px) and (max-width: 645px) {
-    h1 {
-        /* width: 100px; */
-        font-size: 2rem;
-        align-items: center;
-    }
-
-    #h-1 {
-        font-size: 2rem;
-        align-items: start;
-    }
-
-    .hero {
+@media (min-width:200px) and (max-width:750px){
+    .hero{
         display: block;
-        justify-content: left;
-        align-items: start;
-    }
+        /* margin-left: 120px; */
 
-    .right img {
-        width: 300px;
-        height: 250px;
     }
-
-    .logo {
-        /* padding: 0 2px; */
-        color: rgb(95, 95, 95);
-        font-size: 1rem;
-        font-weight: bold;
+    .container{
+        width: auto;
     }
-
-    .container {
-        display: flex;
-        /* justify-content: space-between; */
-        flex-wrap: wrap;
-        align-items: center;
-        padding: 20px 0;
-        width: 100vw;
+    .logo{
+        font-size: 0.8rem;
     }
-
-    .navbar ul{
-        gap: 30px;
-    }
-
-     .navbar ul li {
-        list-style: none;
-        display: flex;
-        justify-content: space-evenly; 
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-    }
-
-    .navbar ul li a {
-        color: grey;
-        text-decoration: none;
+    .button a{
         font-size: 0.7rem;
-    } 
-
-    .username {
-        padding: 5px;
-        border-radius: 5px;
     }
-
+    .navbar li a {
+        font-size: 0.7rem;
+        padding: 5px;
+    }
+    .nav{
+        padding: 2rem 1rem;
+    }
+    .left h1{
+        font-size: 2rem;
+    }
+    .left p{
+        width: auto;
+        font-size: 1rem;
+    }
+    .right img{
+        height: 250px;
+        width: 300px;
+    }
+   
 }
