--- a/Module4-CSS/Assignment/style.css
+++ b/Module4-CSS/Assignment/style.css
@@ -1,68 +1,86 @@
 * {
     padding: 0;
     margin: 0;
-    box-sizing: content-box;
+    box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-.container{
-    width: auto;
-}
+
+/* here starts the navigation bar section */
 
 .nav {
-    /* background-color: lightblue; */
-    max-width: 100vw;
-    padding: 2rem 4.5rem;
+    width: 100%;
+    height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+}
+
+.nav h2 {
+    font-size: 1.5rem;
+    color: rgb(95, 95, 95);
+    font-weight: 600;
+    margin-left: 4vw;
+
 }
 
 .navbar {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
     list-style: none;
 }
 
 .navbar li a {
     color: grey;
     text-decoration: none;
-    padding: 20px;
-    margin: 0 5px;
 }
-.logo{
-    font-size: 0.9rem;
-    font-weight: bold;
-    color: rgb(95, 95, 95);
-}
-.button{
+
+.button {
     background-color: rgb(220, 242, 255);
-    padding: 10px 18px;
+    margin-right: 4vw;
+    padding: 0.4vw 1vw;
     border-radius: 10px;
 
 }
-.button a{
+
+.button a {
     color: rgb(49, 176, 255);
     text-decoration: none;
     font-size: 0.9rem;
 }
 
-.hero{
+/* Here starts the Contents and image */
+
+.hero {
+    height: calc(100% - 80px);
     display: flex;
     justify-content: space-around;
     align-items: center;
     margin: 5rem;
+    flex-wrap: wrap;
+}
 
+.left {
+    padding: 3vw 5vw;
 }
-.left{
-    max-width: 500px;
-}
-.left h1{
+
+.left h1 {
     font-size: 3rem;
     line-height: 4rem;
 }
-#h-1{
+
+span {
+    font-size: 3rem;
+    font-weight: bold;
+}
+
+#h-1 {
     color: rgb(49, 176, 255);
 }
-.left p{
+
+.left p {
     margin-top: 20px;
     padding-bottom: 20px;
     color: darkgrey;
@@ -70,57 +88,70 @@
     font-size: large;
     line-height: 1.8rem;
 }
-.service-btn{
+
+.service-btn {
     display: inline-block;
     background-color: rgb(49, 176, 255);
     margin: 10px;
     padding: 15px 10px;
     border-radius: 10px;
 }
-.service-btn a{
+
+.service-btn a {
     text-align: center;
     font-size: smaller;
     color: white;
     text-decoration: none;
 }
 
-.right img{
+.right img {
     width: 530px;
     height: 450px;
 }
 
-@media (min-width:200px) and (max-width:750px){
-    .hero{
-        display: block;
-        /* margin-left: 120px; */
+@media (max-width: 600px) {
 
+    span{
+        font-size: 2rem;
+        font-weight: bold;
     }
-    .container{
-        width: auto;
+
+    .nav h2 {
+        font-size: 1rem;
     }
-    .logo{
-        font-size: 0.8rem;
-    }
-    .button a{
+
+    .button a {
         font-size: 0.7rem;
     }
+
+    .navbar {
+        gap: 2px;
+    }
+
     .navbar li a {
         font-size: 0.7rem;
         padding: 5px;
     }
-    .nav{
+
+    .nav {
         padding: 2rem 1rem;
     }
-    .left h1{
+
+    .left {
+        padding: 0;
+    }
+
+    .left p {
+        width: 100%;
+    }
+
+    .left h1 {
         font-size: 2rem;
     }
-    .left p{
-        width: auto;
-        font-size: 1rem;
-    }
-    .right img{
+
+    .right img {
         height: 250px;
         width: 300px;
     }
-   
+
 }
