--- a/Module4-CSS/Assignment/style.css
+++ b/Module4-CSS/Assignment/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+html, body{
+    width: 100%;
+    height: 100%;
+}
 
 /* here starts the navigation bar section */
 
